<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/main_menu_anadirNota"
        android:icon="@drawable/ic_main_menu_anadir_nota_foreground"
        android:title="@string/main_menu_anadirNota" />
    <item
        android:id="@+id/main_menu_mandarEmail"
        android:icon="@drawable/ic_main_menu_anadir_email_foreground"
        android:title="@string/main_menu_mandarEmail" />
    <item
        android:id="@+id/main_menu_anadirAmigo"
        android:icon="@drawable/ic_main_menu_anadir_amigo_foreground"
        android:title="@string/main_menu_anadirAmigo" />
    <item
        android:id="@+id/main_menu_anadirCita"
        android:icon="@drawable/ic_main_menu_anadir_cita_foreground"
        android:title="@string/main_menu_anadirCita" />
    <item
        android:id="@+id/main_menu_acercaDe"
        android:icon="@drawable/ic_main_menu_acerca_de_foreground"
        android:title="@string/main_menu_acercaDe" />
</menu>